docker-examples/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite: www.google.com
                  cluster: service_google
          access_log:
          - name: envoy.http_grpc_access_log
            config:
              common_config:
                log_name: "sigsci-agent-grpc"
                grpc_service:
                  envoy_grpc:
                    cluster_name: sigsci-agent-grpc
                  timeout: 0.2s
              additional_request_headers_to_log:
              # These sigsci-agent headers are required for correct processing:
              - "x-sigsci-request-id"
              - "x-sigsci-waf-response"
              # Optionally, additional headers can be added that should be recorded:
              - "accept"
              - "content-type"
              - "content-length"
              additional_response_headers_to_log:
              - "date"
              - "server"
              - "content-type"
              - "content-length"
          http_filters:
          - name: envoy.ext_authz
            config:
              grpc_service:
                envoy_grpc:
                  cluster_name: sigsci-agent-grpc
                timeout: 0.2s
              failure_mode_allow: true

              ### Include the request body data (Envoy v1.10+ only, see limitations and
              ### workarounds for older versions)
              with_request_body:
                # Maximum request body bytes buffered and sent to the sigsci-agent
                max_request_bytes: 8192
                # NOTE: If allow_partial_message is set false, then any request over
                # the above max bytes will fail with an HTTP "413 Payload Too Large"
                # so it is recommended to set this to true.
                allow_partial_message: true
          - name: envoy.router
            config: {}
  clusters:
  - name: sigsci-agent-grpc
    connect_timeout: 0.2s
    type: strict_dns
    #lb_policy: LEAST_REQUEST
    http2_protocol_options: {}
    #tls_context: {}
    ### You can also use 'hosts' below, but this is deprecated
    load_assignment:
      cluster_name: sigsci-agent-grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 0.0.0.0
                port_value: 8000
  - name: service_google
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_google
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 443
    tls_context:
      sni: www.google.com
